<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:paddingBottom="15dp"
            android:text="@string/enter_title">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:id="@+id/secret_text"
            android:hint="@string/user_secret">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:id="@+id/key"
            android:hint="@string/user_key"
            tools:ignore="RtlSymmetry">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/secret_button"
            android:id="@+id/secret_button">
        </Button>
    </LinearLayout>

</LinearLayout>